Added login functionality Bug: the login screen appears behind the side panel

--- a/mathchat.html
+++ b/mathchat.html
@@ -53,10 +53,14 @@
       <span style="float:right;margin-right:10px">
 	Go to room:
       <form class="roomnav" style="display:inline">
-	<input type="text" name="room">
-	</form>
+	    <input type="text" name="room">
+	  </form>
       </span>
     </div>
+    <div id="loginbutton">
+        {{> loginButtons}}
+    </div>
+    
   </div>
 </template>
 
