Preview is now with a clicking mechanism Added preview button and send button and altered event handlers a bit

--- a/mathchat.html
+++ b/mathchat.html
@@ -91,6 +91,7 @@
 
 <template name="textentry">
   <textarea class="chatinput" type="text" form="newchat" name="text"> </textarea>
-  <input type="button"> 
+  <input type="button" id="previewbutton" value="Preview"/>
+  <input type="button" id="sendbutton" value="Send"/>
 </template>
 
