Enabled display of users currently in each chatroom

--- a/mathchat.html
+++ b/mathchat.html
@@ -2,7 +2,7 @@
   <title>mathchat 0.1</title>
   <link rel="icon" 
       type="image/png" 
-      href="favicon.png">
+      href="/favicon.png">
 </head>
 <body>
 </body>
@@ -33,7 +33,7 @@
         {{roomname}}
       </div>
       <div id="currentusers">
-        Current users go here
+        {{{currentusers}}}
       </div>
       <div id="reference">
         LaTeX quick reference goes here
