Added adjustable panes for preview and messages and edited the timestamp

--- a/mathchat.html
+++ b/mathchat.html
@@ -83,6 +83,7 @@
         <span style="color:silver">Pin the problem statement/important messages here!</span>
       {{/if}}
     </div>
+    <div id="splitbar"></div>
     <div id="messages">
       {{#each messages}}
         {{> chat}}
