--- a/mathchat.html
+++ b/mathchat.html
@@ -66,7 +66,7 @@
 
 <template name="chat">
   <p>{{user}} <span style="color:grey">{{time}}</span>:
-    {{#mathjax}}{{#autolink}}<span>{{text}}</span>{{/autolink}}{{/mathjax}} <input {{pinid}}/> </p>
+    {{#mathjax}}<span class="textregion">{{text}}</span>{{/mathjax}} <input {{pinid}}/> <input {{deleteid}}/> </p>
 </template>
 
 <!-- No hyphens in names. at all. -->
@@ -77,7 +77,7 @@
       {{#if pinnedmessages}}
         {{#each pinnedmessages}}
           <p><span style="color:silver">{{username}}</span>:
-          {{#mathjax}}{{#autolink}}<span>{{text}}</span>{{/autolink}}{{/mathjax}}<input {{pinattributes}}/></p>
+          {{#mathjax}}<span class="pintextregion">{{text}}</span>{{/mathjax}}<input {{pinattributes}}/></p>
         {{/each}}
       {{else}}
         <span style="color:silver">Pin the problem statement/important messages here!</span>
@@ -106,4 +106,3 @@
   <input type="button" id="previewbutton" value="Preview"/>
   <input type="button" id="sendbutton" value="Send"/>
 </template>
-
