Added a reservation system User must be logged in in order to reserve a room. Guests are automatically not allowed to enter a reserved room User will be displayed as admin in the current users area. Present users will be shown in black while invited but not present users shall be shown in light gray The admin has the ability to add or remove anyone from the invited list, unless that user is already currently in the room The admin and only the admin has the ability to unreserve the room

--- a/mathchat.html
+++ b/mathchat.html
@@ -61,16 +61,25 @@
   </div>
 </template>
 
+<template name="accessdenied">
+    Oops darn it looks like this room is already reserved!
+</template>
+
 
 <template name="chatroom">
   {{> chatarea}}
   <div class="sidepanel">
       <div id="roomname">
-        {{roomname}}
+        <div id="roomnametext">{{roomname}}</div><input id = "roomnamebutton" type="button" value = {{resbutton}} />
       </div>
       <div id="currentusers">
         {{{currentusers}}}
+        <span style="color:silver">{{{allowedusers}}}</span>
       </div>
+      {{#if reserved}} 
+        <input id="addname" type="text" placeholder="Invite users here" />
+        <input id="addbutton" type="image" src="/add.png"/>
+      {{/if}}
       <div id="reference">
       <h3 style="margin-top: 0; margin-bottom: 2px">LaTeX Quick Reference</h3>
       <span style="font-size: 12px">Wrap your math in $...$ signs for inline math, $$...$$ for display mode!</span>
