Added more functionality to subscriptions Allowed for unsubscription on homepage Direct links that take you to subscribed room

--- a/mathchat.html
+++ b/mathchat.html
@@ -81,6 +81,7 @@
 </template>
 <template name="homepage">
   {{#if currentUser}}
+  <img src="/logo512.png" width="512px" style="display:block;margin-left: 20px">
   <div id="homepage" >
     <h2>Hello, {{currentUsername}}!</h2>
     
