Made title blink when new messages

--- a/mathchat.html
+++ b/mathchat.html
@@ -45,7 +45,7 @@
   
   <!-- Header includes navigation bar and title -->
   <div id="header">
-    <img id="title" src="/logo512.png" />
+    <a href="/"> <img id="titleimage" src="/logo512.png" /> </a>
     <div id="navigationbar">
       <a class="navbutton" href="/">Home</a>
       <a class="navbutton" href="/room/lobby"> Lobby </a>
