--- a/mathchat.html
+++ b/mathchat.html
@@ -183,6 +183,11 @@
       <a class="navbutton" href="/">Home</a>
       <a class="navbutton" href="/room/lobby"> Lobby </a>
       <a class="navbutton" href="/guide"> Help </a>
+      {{#if canSubscribe}}
+      <div id="fullchat" style="display: inline; float: right; margin-right: 10px">
+        <input type="button" value="Get the full chat" />
+    </div>
+    {{/if}}
       <span style="float:right;margin-right:10px">
 	Go to room:
       <form class="roomnav" style="display:inline">
@@ -197,15 +202,24 @@
     <div id="subscribe">
         <input type="button" value={{isSubscribed}} id="subscribebutton" />
     </div>
+    
     {{/if}}
     
   </div>
 </template>
 
+<template name="fullchatroom">
+  <div id="messagesfull" style="background-color: white; width: 100%; height: 100%; padding: 5px">
+      {{#each messagesfull}}
+        {{> chat}}
+      {{/each}}
+    </div>
+</template>
 <template name="chat">
   <p>{{user}} <span style="color:grey">{{time}}</span>:
     {{#mathjax}}{{#autolink}}<span class="textregion">{{text}}</span>{{/autolink}}{{/mathjax}} <input {{pinid}}/> <input {{deleteid}}/> </p>
 </template>
+
 
 <!-- No hyphens in names. at all. -->
 
